--- a/public/main_styles.scss
+++ b/public/main_styles.scss
@@ -13,9 +13,25 @@ $hover_background: rgb(78, 78, 78);
 $side_container_background: rgb(214, 226, 226);
 $button_background:  rgb(74, 83, 85);
 $font_color: rgb(218, 218, 218);
+$icon_width: 50px;
+$icon_height: 50px;
 
 body {
     background: $body_background;
+}
+
+.icon {
+    width: $icon_width;
+    height: $icon_height;
+}
+
+.margin {
+    margin: 1rem;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
 }
 
 .hide {
@@ -66,26 +82,42 @@ body {
 //lobby 
 .player_list {
     margin: 1em;
+    list-style: none;
 
     & > * {
         margin: 1em;
     }
 }
 
+.player {
+    border-right: 1px solid rgb(197, 197, 197);
+    padding-right: 1em;
+}
+
+.role_icon {
+    margin: auto;
+}
+
+
+//login logout section
 .guest {
     color: black;
     cursor: default;
+    margin-left: 1rem;
 }
 
 .login_section {
     // background-color: red;
+    margin: 0;
     color:white;
-    margin: 1rem;
-    margin-top: 0;
     padding: 1em;
     position: fixed;
+    top:0;
     left: 0;
     z-index: 1;
+    border-radius: 0;
+    height: 100%;
+    cursor: default;
     &:hover { 
         // background: $hover_background;
         color: white;
@@ -104,12 +136,19 @@ body {
     }
 }
 
+.player_img {
+    background: white;
+    cursor: default;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
 .drop_down_container {
     margin: 1em;
-    margin-left: 0;
     margin-bottom: 0;
     padding: 1em;
-    padding-left: 0;
+    text-align: center;
 }
 
 .intro_container {
@@ -246,6 +285,12 @@ body {
 
 .s_t_ol {
     margin-bottom: 1em;
+}
+
+.li {
+    background-color: rgba(255, 255, 255, 0.077);
+    padding: 1rem;
+    font-size: 1.3rem;
 }
 
 .li_q {
