--- a/public/main_styles.scss
+++ b/public/main_styles.scss
@@ -20,6 +20,10 @@ body {
     background: $body_background;
 }
 
+.intro_title {
+    margin: 1em;
+}
+
 .icon {
     width: $icon_width;
     height: $icon_height;
@@ -116,12 +120,15 @@ body {
     left: 0;
     z-index: 1;
     border-radius: 0;
-    height: 100%;
     cursor: default;
     &:hover { 
         // background: $hover_background;
         color: white;
     }
+}
+
+.vh100 {
+    height: 100%;
 }
 
 .log_link {
@@ -230,8 +237,8 @@ body {
     position: absolute;
     left: 0;
     width: 27vw;
-    margin: 1em;
-    height: 300px;
+    margin: 0 1em;
+    height: 70%;
     overflow-y: scroll;
     padding: 1rem;
     background: $form_background;
@@ -283,8 +290,15 @@ body {
     }
 }
 
+.side_div {
+    background: rgba(255, 255, 255, 0.159);
+    padding: 1rem;
+    margin-top: .5rem;
+}
+
 .s_t_ol {
     margin-bottom: 1em;
+    list-style-type: none;
 }
 
 .li {
@@ -301,6 +315,27 @@ body {
 .li_a {
     margin: 1em;
     transition: 350ms ease-in-out;
+    padding: .5em;
+
+    &:hover { 
+        background: rgb(87, 87, 87);
+    }
+}
+
+//context Menu
+.menuOptions {
+    list-style-type: none;
+}
+
+.menu_li {
+    padding: .5rem;
+    background-color: rgb(12, 77, 97);
+    color:white;
+    cursor: pointer;
+
+    &:hover{
+        background: rgba(0, 0, 0, 0.495);
+    }
 }
 
 .form {
@@ -378,6 +413,11 @@ input {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 2rem;
+}
+
+//for less than 3 answers
+.one_row {
+    grid-template-rows: 1fr;
 }
 
 .a_top_page {
