--- a/views/users/guest.ejs
+++ b/views/users/guest.ejs
@@ -18,7 +18,7 @@
       </section>
     </section>
 
-    <!-- End dialog -->
+    <!-- End game dialog -->
     <dialog class="end_dialog">
       <img src="/res/media/close.png" alt="close dialog" class="close" />
       <div class="dialog_container">
@@ -35,7 +35,7 @@
 
     <div class="intro_container">
       <h1 class="intro_title">Q & A</h1>
-      <p class="intro_p">1 question and 4 answers.</p>
+      <!-- <p class="intro_p">1 question and 4 answers.</p> -->
     </div>
 
     <div class="side_container transition">
