--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
 
     <div class="intro_container">
       <h1 class="intro_title">Q & A</h1>
-      <p class="intro_p">1 question and 4 answers.</p>
+      <!-- <p class="intro_p">1 question and 4 answers.</p> -->
     </div>
 
     <div class="side_container transition">
@@ -61,6 +61,7 @@
       <div class="btn_container">
         <button class="btn add">Add</button>
         <button class="btn create">Create</button>
+        <button class="btn start">Start game</button>
         <button class="btn reset">Reset</button>
       </div>
     </div>
